--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-
+<html>
+    <head>
+       <meta http-equiv=Content-Type content="text/html; charset=windows-1252">
+    </head>
+    <body >
+       <h1>My Deep Link Test page</h1>
+       <p><a href="unitydl://mylink">Launch</a></p>
+       <form action="unitydl://mylink">
+         <label for="fname">First name:</label><br>
+         <input type="text" id="fname" name="fname" value="John"><br>
+         <label for="lname">Last name:</label><br>
+         <input type="text" id="lname" name="lname" value="Doe"><br><br>
+         <input type="submit" value="Submit">
+       </form>
+    </body>
+</html>
